--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "application-name",
+  "name": "proverbial-shake",
   "version": "0.0.1",
   "private": true,
+  "main": "app.js",
+  "author": "Jonathan Lai",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "underscore": "~1.6.0",
+    "logfmt": "~0.21.0"
   }
 }
