package json add request npm library

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jade": "*",
     "stylus": "*",
     "underscore": "~1.6.0",
-    "logfmt": "~0.21.0"
+    "logfmt": "~0.21.0",
+    "request": "~2.34.0"
   }
 }
